--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,60 +8,80 @@
     android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/main_title"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Super App"
-        android:textAlignment="center"
-        android:textSize="30dp"
+        android:background="@color/purple_200"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:id="@+id/search_layout"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:background="@color/white"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_title"
-        android:gravity="center|right">
-
-        <EditText
-            android:id="@+id/editMobileNo"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/main_profile"
+            android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
-            android:ems="10"
-            android:hint="@string/search"
-            android:drawableRight="@drawable/ic_search_black"
-            android:gravity="right" >
-        </EditText>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="fitCenter"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:src="@drawable/ic_account_circle_white_18dp" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/main_title"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="Super App"
+            android:textAlignment="center"
+            android:textSize="30dp"/>
+        <ImageView
+            android:id="@+id/main_qr"
+            app:layout_constraintRight_toLeftOf="@+id/main_notification"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitCenter"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:src="@drawable/ic_qr_code_scanner_white_18dp" />
+        <ImageView
+            android:id="@+id/main_notification"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitCenter"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:src="@drawable/ic_notifications_white_18dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_layout">
-    </androidx.viewpager.widget.ViewPager>
+        app:layout_constraintTop_toBottomOf="@+id/main_title_layout"></androidx.viewpager.widget.ViewPager>
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent">
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/main_tablayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="fill"
-            app:tabMode="fixed"/>
+            app:tabMode="fixed" />
     </com.google.android.material.appbar.AppBarLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
