--- a/app/src/main/res/layout/sponsor_fragment_main.xml
+++ b/app/src/main/res/layout/sponsor_fragment_main.xml
@@ -7,14 +7,11 @@
 	android:layout_height="match_parent"
 	tools:context=".ui.homefragment.sponsors.SponsorholderFragment">
 
-	<TextView
-		android:id="@+id/section_label"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		android:layout_marginEnd="16dp"
-		android:layout_marginBottom="16dp"
+	<ImageView
+		android:id="@+id/home_sponsored_item"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:scaleType="centerCrop"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintTop_toTopOf="@+id/constraintLayout"
 		tools:layout_constraintLeft_creator="1"
