--- a/app/src/main/res/layout/layout_app_category.xml
+++ b/app/src/main/res/layout/layout_app_category.xml
@@ -14,12 +14,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/category_textview"
         android:text="Category"
         android:textSize="20dp"
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/apps_finance_recycler_view"
+        android:id="@+id/category_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
